# dbot_control_lib

./: CMakeLists.txt  package.xml
include/dbot_control_lib/: cartesian.hpp  dbot_control.hpp  enums.hpp  joint_angle.hpp  joint_configuration.hpp  linear_algebra.hpp  links.hpp  robot.hpp  robot_builder.hpp  robot_lib.hpp  trajectory.hpp  trajectory_generator.hpp  trajectory_point.hpp  waypoint.hpp
src/: cartesian.cpp  dbot_control.cpp  joint_angle.cpp  joint_configuration.cpp  links.cpp  robot.cpp  robot_builder.cpp  trajectory.cpp  trajectory_generator.cpp
